--- a/02_git_configuration_Google_Colab.ipynb
+++ b/02_git_configuration_Google_Colab.ipynb
@@ -72,13 +72,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "d37ad3e1-8a65-4906-b770-3bd49f2d2d99",
       "metadata": {
-        "id": "d37ad3e1-8a65-4906-b770-3bd49f2d2d99"
+        "id": "d37ad3e1-8a65-4906-b770-3bd49f2d2d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0a07e5c-7e36-47ba-b37c-041ea7f1401b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Edited!\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Edited!\")"
+      ]
     }
   ],
   "metadata": {
